# truthed

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_dev.py  setup_dev_environment.py
backend/: package.json  server.js
config/: settings.py
docs/user-interviews/: interview_template.md
extension/: manifest.json  package-lock.json  package.json  webpack.config.js
extension/background/: background.js
extension/content/: content.css  content.js
extension/options/: options.css  options.html  options.js
extension/popup/: popup.css  popup.html  popup.js
notebooks/: 01_data_exploration.ipynb  02_claim_extraction_experiments.ipynb
scripts/: annotate_claims.py  collect_data.py  debug_rss.py  debug_text_processing.py  test_claim_extraction.py  test_collection.py  test_pycharm_environment.py  verify_setup.py
src/truthed/: __init__.py
src/truthed/api/: __init__.py
src/truthed/core/: __init__.py  models.py
src/truthed/data/: __init__.py
src/truthed/data/collection/: base_collector.py  config.py  rss_collector_fixed.py
src/truthed/data/preprocessing/: __init__.py  claim_extraction.py  text_processing.py
src/truthed/database/: __init__.py
src/truthed/models/: __init__.py
src/truthed/models/claim_extraction/: __init__.py  bert_classifier.py  claim_structurer.py
src/truthed/services/: __init__.py
src/truthed/utils/: __init__.py
web/: app.py
web/static/css/: main.css
web/templates/: base.html  demo.html  error.html  index.html  methodology.html  results.html
